introduce minimal edit capability
